manifests/ingress-d08e.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "aatiwarishubaks-d08e"
    labels:
        app: "aatiwarishubaks-d08e"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aatiwarishubaksd08e-aatiwarishubaks-d08e.be227b09cf9f4edc992f.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "aatiwarishubaks-d08e"
                servicePort: 4000
